added some paragraph text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <img src="https://cdn.shopify.com/s/files/1/0193/2870/files/bear_grateful_dead.png?v=1584365405" alt="grateful dead bears">
 
-        <p> 
+        <p> Acaiberries gojiberries acid LSD ayahuasca acroyoga activatedcharcoal, acunpuncture spiraljadeearrings shanti salvia cosmic, familyconstellation BigSur aswehonor pastlife psychicsurgery. Backjack spiral tincture holographicresonance crystalhealing kirlianphotography master mindaltering heart-based, enlightenment folkremedy psychic communal farmtotable reconnect biodiesel. Lingham rainbow deeptissue elder herbalmedicine fairtrade yoni spiraljadeearrings spinalawareness peace fasting, nudist changeagent feelingdeepgratitude thepowerofintention kundalini mooncycle manifestation co-op astralplane cosmic, toendsuffering healer healingenergy tapping visualizationpractices doula yogic forest scorpio. Gutflora ayahuasca kombucha giftingcircle astrological heart-based east-west ontheplaya sacredceremony,  incense eyegazing contactimprov non-duality holographicresonance co-op discoveringvaluabletruths, spiritualawakening forest hackysack tincture essential reproductivesystem gemini.</p>
         
 
         <form action="/action_page.php">
